# LightDNF

./: CMakeCache.txt  CMakeLists.txt  LightDNF.cpp  README.md  clean.sh  cmake.sh  cmake_install.cmake
index/: CMakeLists.txt  Makefile  ReversedIndex.hpp
src/: LightDNF.cpp  clean.sh
src/index/: CMakeLists.txt  Container.hpp  InversedIndex.hpp
src/utils/: CMakeLists.txt  FileLoader.hpp
utils/: Makefile
